--- a/app/src/main/res/values/secrets.xml
+++ b/app/src/main/res/values/secrets.xml
@@ -1,8 +1,6 @@
 <resources>
 	<integer name="google_play_services_version">12451000</integer>
-	<string name="firebase_database_url" translatable="false">https://sai-synapse-default-rtdb.firebaseio.com</string>
-	<string name="project_id" translatable="false">sai-synapse</string>
-	<string name="google_app_id" translatable="false">1:308269400761:android:91c2e7415671cc49ed9168</string>
-	<string name="google_api_key" translatable="false">AIzaSyCJSkL4MsVRVwb9sWGvkFQHz-RaGUY-2xo</string>
-	<string name="google_storage_bucket" translatable="false">sai-synapse.firebasestorage.app</string>
+	<!-- Firebase configuration removed - using Supabase -->
+	<string name="supabase_url" translatable="false">https://your-project.supabase.co</string>
+	<string name="supabase_anon_key" translatable="false">your-anon-key-here</string>
 </resources>
