--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,211 +1,189 @@
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:orientation="vertical"
-	android:id="@+id/_main">
-	<LinearLayout
-		android:id="@+id/body"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:background="?attr/colorSurface"
-		android:orientation="vertical">
-		<LinearLayout
-			android:id="@+id/middleLayout"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:background="?attr/colorSurfaceVariant"
-			android:orientation="vertical"
-			android:layout_weight="1">
-			<LinearLayout
-				android:id="@+id/topLayout"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:background="?attr/colorSurface"
-				android:orientation="vertical">
-				<LinearLayout
-					android:id="@+id/topLayoutBar"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:gravity="center_horizontal|center_vertical"
-					android:orientation="horizontal">
-					<LinearLayout
-						android:id="@+id/bottomBar"
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:orientation="horizontal">
-						<LinearLayout
-							android:id="@+id/bottom_home"
-							android:layout_width="match_parent"
-							android:layout_height="match_parent"
-							android:padding="10dp"
-							android:gravity="center_horizontal|center_vertical"
-							android:orientation="vertical"
-							android:layout_weight="1">
-							<ImageView
-								android:id="@+id/bottom_home_ic"
-								android:layout_width="30dp"
-								android:layout_height="30dp"
-								android:src="@drawable/icon_home_round"
-								android:scaleType="centerInside" />
-						</LinearLayout>
-						<LinearLayout
-							android:id="@+id/bottom_search"
-							android:layout_width="match_parent"
-							android:layout_height="match_parent"
-							android:padding="10dp"
-							android:gravity="center_horizontal|center_vertical"
-							android:orientation="vertical"
-							android:layout_weight="1">
-							<ImageView
-								android:id="@+id/bottom_search_ic"
-								android:layout_width="30dp"
-								android:layout_height="30dp"
-								android:src="@drawable/icon_search_round"
-								android:scaleType="centerInside" />
-						</LinearLayout>
-						<LinearLayout
-							android:id="@+id/bottom_videos"
-							android:layout_width="match_parent"
-							android:layout_height="match_parent"
-							android:padding="5dp"
-							android:gravity="center_horizontal|center_vertical"
-							android:orientation="vertical"
-							android:layout_weight="1">
-							<ImageView
-								android:id="@+id/bottom_videos_ic"
-								android:layout_width="30dp"
-								android:layout_height="30dp"
-								android:src="@drawable/icon_video_chat_round"
-								android:scaleType="fitCenter" />
-						</LinearLayout>
-						<LinearLayout
-							android:id="@+id/bottom_chats"
-							android:layout_width="match_parent"
-							android:layout_height="match_parent"
-							android:padding="10dp"
-							android:gravity="center_horizontal|center_vertical"
-							android:orientation="vertical"
-							android:layout_weight="1">
-							<ImageView
-								android:id="@+id/bottom_chats_ic"
-								android:layout_width="30dp"
-								android:layout_height="30dp"
-								android:src="@drawable/icon_message_round"
-								android:scaleType="centerInside" />
-						</LinearLayout>
-						<LinearLayout
-							android:id="@+id/bottom_profile"
-							android:layout_width="match_parent"
-							android:layout_height="wrap_content"
-							android:padding="10dp"
-							android:gravity="center_horizontal|center_vertical"
-							android:orientation="vertical"
-							android:layout_weight="1">
-							<ImageView
-								android:id="@+id/bottom_profile_ic"
-								android:layout_width="30dp"
-								android:layout_height="30dp"
-								android:src="@drawable/icon_account_circle_round"
-								android:scaleType="centerInside" />
-						</LinearLayout>
-					</LinearLayout>
-					<TextView
-						android:id="@+id/topLayoutBarTitle"
-						android:layout_width="0dp"
-						android:layout_height="0dp"
-						android:gravity="center_horizontal|center_vertical"
-						android:textSize="20sp"
-						android:textStyle="bold"
-						android:textColor="#000000"
-						android:layout_weight="1"
-						tools:replace="android:text"
-						android:text="@string/explore" />
-				</LinearLayout>
-				<LinearLayout
-					android:id="@+id/topLayoutBarMiddle"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:gravity="center_horizontal|center_vertical"
-					android:orientation="horizontal">
-					<ImageView
-						android:id="@+id/topLayoutBarMiddleSearchLayoutCancel"
-						android:layout_width="26dp"
-						android:layout_height="26dp"
-						android:layout_marginLeft="18dp"
-						android:padding="2dp"
-						android:src="@drawable/ic_arrow_back_ios_new_48px"
-						android:scaleType="centerCrop" />
-					<LinearLayout
-						android:id="@+id/topLayoutBarMiddleSearchLayout"
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:layout_marginLeft="18dp"
-						android:layout_marginRight="18dp"
-						android:layout_marginBottom="5dp"
-						android:paddingLeft="14dp"
-						android:paddingTop="6dp"
-						android:paddingRight="18dp"
-						android:paddingBottom="6dp"
-						android:background="#F5F5F5"
-						android:gravity="center_vertical"
-						android:orientation="horizontal">
-						<EditText
-							android:id="@+id/topLayoutBarMiddleSearchInput"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:layout_marginLeft="4dp"
-							android:padding="4dp"
-							android:background="@android:color/transparent"
-							android:textSize="18sp"
-							android:textColor="#000000"
-							android:hint="Search"
-							android:textColorHint="#757575"
-							android:singleLine="true"
-							android:imeOptions="actionSearch"
-							android:layout_weight="1"
-							android:fontFamily="@font/product_sans" />
-						<ImageView
-							android:id="@+id/topLayoutBarMiddleSearchLayoutIc"
-							android:layout_width="0dp"
-							android:layout_height="match_parent"
-							android:layout_marginLeft="8dp"
-							android:padding="2dp"
-							android:src="@drawable/default_image"
-							android:scaleType="centerInside" />
-					</LinearLayout>
-				</LinearLayout>
-			</LinearLayout>
-			<LinearLayout
-				android:id="@+id/SearchUserLayout"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:orientation="vertical">
-				<androidx.recyclerview.widget.RecyclerView
-					android:id="@+id/SearchUserLayoutRecyclerView"
-					android:layout_width="match_parent"
-					android:layout_height="match_parent"
-					tools:listitem="@layout/synapse_users_list_cv" />
-				<TextView
-					android:id="@+id/SearchUserLayoutNoUserFound"
-					android:layout_width="match_parent"
-					android:layout_height="match_parent"
-					android:padding="8dp"
-					android:gravity="center_horizontal|center_vertical"
-					android:textSize="18sp"
-					android:textColor="#757575"
-					tools:replace="android:text"
-					android:text="@string/no_user_found" />
-			</LinearLayout>
-		</LinearLayout>
-		<LinearLayout
-			android:id="@+id/bottomSpc"
-			android:layout_width="match_parent"
-			android:layout_height="1dp"
-			android:padding="8dp"
-			android:background="#F5F5F5"
-			android:orientation="horizontal" />
-	</LinearLayout>
-</LinearLayout>
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="?attr/colorSurface">
+
+    <!-- App Bar with SearchView -->
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorSurface"
+        app:elevation="0dp">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:navigationIcon="@drawable/ic_arrow_back_ios_new_48px"
+            app:navigationIconTint="?attr/colorOnSurface">
+
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/searchView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="16dp"
+                android:iconifiedByDefault="false"
+                android:queryHint="Search people, posts, photos..."
+                app:queryBackground="@android:color/transparent"
+                app:searchIcon="@null"
+                app:closeIcon="@drawable/ic_close_24px" />
+
+        </com.google.android.material.appbar.MaterialToolbar>
+
+        <!-- Filter Chips -->
+        <HorizontalScrollView
+            android:id="@+id/filterScrollView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:scrollbars="none">
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/chipGroup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:singleSelection="true"
+                app:selectionRequired="true">
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chipAll"
+                    style="@style/Widget.Material3.Chip.Filter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="All"
+                    android:checked="true" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chipPeople"
+                    style="@style/Widget.Material3.Chip.Filter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="People" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chipPosts"
+                    style="@style/Widget.Material3.Chip.Filter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Posts" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chipPhotos"
+                    style="@style/Widget.Material3.Chip.Filter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Photos" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chipVideos"
+                    style="@style/Widget.Material3.Chip.Filter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Videos" />
+
+            </com.google.android.material.chip.ChipGroup>
+
+        </HorizontalScrollView>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <!-- Main Content -->
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <!-- Search Results RecyclerView -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewResults"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                android:paddingTop="8dp"
+                android:paddingBottom="80dp"
+                tools:listitem="@layout/item_search_user" />
+
+            <!-- Empty State -->
+            <LinearLayout
+                android:id="@+id/emptyStateLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="80dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="32dp"
+                android:visibility="gone">
+
+                <ImageView
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:alpha="0.5"
+                    android:src="@drawable/icon_search_round"
+                    app:tint="?attr/colorOnSurfaceVariant" />
+
+                <TextView
+                    android:id="@+id/emptyStateTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="No results found"
+                    android:textAppearance="?attr/textAppearanceTitleMedium"
+                    android:textColor="?attr/colorOnSurface" />
+
+                <TextView
+                    android:id="@+id/emptyStateMessage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:gravity="center"
+                    android:text="Try searching for people, posts, or media"
+                    android:textAppearance="?attr/textAppearanceBodyMedium"
+                    android:textColor="?attr/colorOnSurfaceVariant" />
+
+            </LinearLayout>
+
+            <!-- Loading State -->
+            <LinearLayout
+                android:id="@+id/loadingLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="80dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="32dp"
+                android:visibility="gone">
+
+                <com.google.android.material.progressindicator.CircularProgressIndicator
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:indeterminate="true"
+                    app:indicatorColor="?attr/colorPrimary" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="Searching..."
+                    android:textAppearance="?attr/textAppearanceBodyMedium"
+                    android:textColor="?attr/colorOnSurfaceVariant" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
