--- a/app/src/main/res/layout/synapse_users_list_cv.xml
+++ b/app/src/main/res/layout/synapse_users_list_cv.xml
@@ -17,7 +17,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:padding="8dp"
-			android:background="#FFFFFF"
+			android:background="@color/card_background"
 			android:gravity="center_vertical"
 			android:orientation="horizontal">
 			<RelativeLayout
@@ -58,7 +58,7 @@
 							android:layout_width="12dp"
 							android:layout_height="12dp"
 							android:padding="8dp"
-							android:background="#2196F3"
+							android:background="@color/status_indicator_online"
 							android:orientation="vertical" />
 					</LinearLayout>
 				</LinearLayout>
@@ -83,7 +83,7 @@
 						android:layout_marginRight="4dp"
 						android:text="Username"
 						android:textStyle="bold"
-						android:textColor="#000000"
+						android:textColor="@color/username_text"
 						tools:replace="android:textSize"
 						android:textSize="14dp" />
 					<ImageView
@@ -109,7 +109,7 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:text="Name"
-					android:textColor="#616161"
+					android:textColor="@color/secondary_text"
 					android:singleLine="true"
 					tools:replace="android:textSize"
 					android:textSize="12dp" />
