--- a/app/src/main/res/drawable/gradient_bottom_overlay.xml
+++ b/app/src/main/res/drawable/gradient_bottom_overlay.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="270"
-        android:startColor="#00000000"
-        android:endColor="#80000000"
+        android:startColor="@color/gradient_transparent"
+        android:endColor="@color/gradient_semi_black"
         android:type="linear" />
 </shape>
