--- a/app/src/main/res/layout/synapse_comments_list_cv.xml
+++ b/app/src/main/res/layout/synapse_comments_list_cv.xml
@@ -48,7 +48,7 @@
 					android:text="@username"
 					android:textSize="16sp"
 					android:textStyle="bold"
-					android:textColor="#616161" />
+					android:textColor="@color/secondary_text" />
 				<ImageView
 					android:id="@+id/genderBadge"
 					android:focusable="false"
@@ -127,7 +127,7 @@
 					android:layout_marginBottom="4dp"
 					android:text="comment"
 					android:textSize="16sp"
-					android:textColor="#000000"
+					android:textColor="@color/username_text"
 					android:layout_weight="1"
 					android:autoLink="all" />
 			</LinearLayout>
