--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -63,7 +63,9 @@
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:layout_marginBottom="14dp"
-					app:cardElevation="0dp">
+					android:background="@drawable/bg_profile_edit_profile_card"
+					app:cardElevation="0dp"
+					app:cardCornerRadius="28dp">
 					<RelativeLayout
 						android:id="@+id/stage1Relative"
 						android:layout_width="match_parent"
@@ -85,7 +87,9 @@
 								android:id="@+id/stage1RelativeUpProfileCard"
 								android:layout_width="85dp"
 								android:layout_height="85dp"
-								app:cardElevation="2dp">
+								android:background="@drawable/bg_profile_edit_profile_image"
+								app:cardElevation="2dp"
+								app:cardCornerRadius="300dp">
 								<ImageView
 									android:id="@+id/stage1RelativeUpProfileImage"
 									android:layout_width="match_parent"
@@ -102,7 +106,7 @@
 					android:layout_height="wrap_content"
 					android:layout_marginBottom="14dp"
 					android:padding="16dp"
-					android:background="@android:color/transparent"
+					android:background="@drawable/bg_profile_edit_input_selector"
 					android:textSize="18sp"
 					android:textColor="?attr/colorOnSurface"
 					android:textColorHint="?attr/colorOnSurfaceVariant"
@@ -116,7 +120,7 @@
 					android:layout_height="wrap_content"
 					android:layout_marginBottom="14dp"
 					android:padding="16dp"
-					android:background="@android:color/transparent"
+					android:background="@drawable/bg_profile_edit_input_selector"
 					android:textSize="18sp"
 					android:textColor="?attr/colorOnSurface"
 					android:textColorHint="?attr/colorOnSurfaceVariant"
@@ -128,7 +132,7 @@
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:padding="16dp"
-					android:background="@android:color/transparent"
+					android:background="@drawable/bg_profile_edit_input_selector"
 					android:textSize="18sp"
 					android:textColor="?attr/colorOnSurface"
 					android:textColorHint="?attr/colorOnSurfaceVariant"
@@ -141,7 +145,7 @@
 					android:layout_marginTop="14dp"
 					android:layout_marginBottom="14dp"
 					android:padding="14dp"
-					android:background="?attr/colorSurface"
+					android:background="@drawable/bg_profile_edit_container"
 					android:orientation="vertical">
 					<TextView
 						android:id="@+id/gender_title"
@@ -288,7 +292,7 @@
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:padding="14dp"
-					android:background="?attr/colorSurface"
+					android:background="@drawable/bg_profile_edit_container"
 					android:orientation="vertical">
 					<LinearLayout
 						android:id="@+id/region_top"
@@ -328,7 +332,7 @@
 					android:layout_height="wrap_content"
 					android:layout_marginTop="14dp"
 					android:padding="14dp"
-					android:background="?attr/colorSurface"
+					android:background="@drawable/bg_profile_edit_container"
 					android:orientation="vertical">
 					<LinearLayout
 						android:id="@+id/profile_image_history_stage_top"
@@ -367,7 +371,7 @@
 					android:layout_height="wrap_content"
 					android:layout_marginTop="14dp"
 					android:padding="14dp"
-					android:background="?attr/colorSurface"
+					android:background="@drawable/bg_profile_edit_container"
 					android:orientation="vertical">
 					<LinearLayout
 						android:id="@+id/cover_image_history_stage_top"
