--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -46,4 +46,10 @@
     <dimen name="edit_text_corner_radius">28dp</dimen>
     <dimen name="edit_text_stroke_width">3dp</dimen>
     <dimen name="button_corner_radius">300dp</dimen>
+    
+    <!-- Auth Screen Responsive Dimensions -->
+    <dimen name="auth_form_max_width">480dp</dimen>
+    <dimen name="auth_horizontal_margin">24dp</dimen>
+    <dimen name="auth_min_touch_target">48dp</dimen>
+    <dimen name="auth_keyboard_padding">16dp</dimen>
 </resources>
