--- a/app/src/main/res/layout/chat_bubble_text.xml
+++ b/app/src/main/res/layout/chat_bubble_text.xml
@@ -9,8 +9,8 @@
 		android:id="@+id/body"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:paddingLeft="0dp"
-		android:paddingRight="0dp"
+		android:paddingLeft="8dp"
+		android:paddingRight="8dp"
 		android:orientation="horizontal"
 		android:animateLayoutChanges="true">
 		<androidx.cardview.widget.CardView
@@ -32,8 +32,9 @@
 		</androidx.cardview.widget.CardView>
 		<LinearLayout
 			android:id="@+id/message_layout"
-			android:layout_width="wrap_content"
+			android:layout_width="0dp"
 			android:layout_height="wrap_content"
+			android:layout_weight="1"
 			android:orientation="vertical">
 			<LinearLayout
 				android:id="@+id/menuView_d"
